objects/Attempts_Made__c.object
<CustomObject>
    <fields>
        <fullName>Attempt_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attempts_Made_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attempt Made By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attempts_Made</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Sub_Status__c</fullName>
        <label>Current Sub Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICC Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempt_Result__c</fullName>
        <label>Attempt Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call + Email</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Left VM</fullName>
                </value>
                <value>
                    <fullName>Connected - Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Attempts_Made</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Attempt Made</label>
    <nameField>
        <displayFormat>AM-{0}</displayFormat>
        <label>Attempts Made</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attempts Made</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Current_Sub_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
        <sharedTo>
            <group>Sys_Local_Admin</group>
        </sharedTo>
    </listViews>
</CustomObject>